--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,8 @@ repos:
     hooks:
       - id: ruff-format # Run the formatter first
         # args: [--check] # Uncomment to only check formatting without applying changes
-      - id: ruff        # Then run the linter (with auto-fix)
-        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff        # Then run the linter (with safer auto-fix)
+        args: [--fix, --exit-non-zero-on-fix, --ignore=F821]  # Ignore undefined names to prevent breaking working code
 
 # To update hooks to their latest versions in the future, you can run:
 # pre-commit autoupdate
