--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: check-toml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
 
 # Temporarily disabled ruff pre-commit hooks due to configuration issues
 # - repo: https://github.com/astral-sh/ruff-pre-commit
